<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aula.atividades.datatotable.Add_Event"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_data"
        android:id="@+id/TV_add_data" />

    <EditText
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Date"
        android:layout_below="@+id/TV_add_data"
        android:layout_marginTop="-10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/BT_add_DatePicker"
        android:layout_toLeftOf="@+id/BT_add_DatePicker" />

    <Button
        android:layout_width="140px"
        android:layout_height="wrap_content"
        android:text="@string/BT_add_DatePicker"
        android:id="@+id/BT_add_DatePicker"
        android:layout_gravity="center_horizontal"
        android:textSize="15px"
        android:layout_alignBottom="@+id/ET_add_Date"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_Time"
        android:id="@+id/TV_add_Time"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Time_Ini"
        android:layout_marginTop="-10dp"
        android:layout_below="@id/TV_add_Time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="as"
        android:id="@+id/as"
        android:layout_marginTop="20dp"
        android:layout_alignTop="@id/ET_add_Time_Ini"
        android:layout_toRightOf="@+id/ET_add_Time_Ini"
         />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Time_Fim"
        android:layout_alignTop="@+id/ET_add_Time_Ini"
        android:layout_toRightOf="@+id/as"
        android:layout_toEndOf="@+id/as" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CKB_add_Dia_interio"
        android:id="@+id/CKB_add_Dia_interio"
        android:layout_alignTop="@+id/ET_add_Time_Fim"
        android:layout_centerHorizontal="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_Local"
        android:id="@+id/TV_add_Local"
        android:layout_below="@+id/ET_add_Time_Ini"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ET_add_Local"
        android:layout_below="@id/TV_add_Local"
        android:layout_marginTop="-10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_add_descricao"
        android:layout_below="@id/ET_add_Local" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ET_add_Descricao"
        android:layout_below="@+id/TV_add_descricao"
        android:layout_marginTop="-10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_add_participantes"
        android:layout_below="@id/ET_add_Descricao"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ET_add_Participantes"
        android:layout_below="@id/TV_add_participantes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/TV_add_tipo"
        android:layout_below="@id/ET_add_Participantes"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SP_add_tipo"
        android:layout_below="@+id/TV_add_tipo" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_add_add_Tipo"
        android:id="@+id/BT_add_add_Tipo"
        android:layout_below="@+id/SP_add_tipo" />

</RelativeLayout>
